BuildingsPy Changelog
---------------------

Version 5.2.1, ...
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Updated pyfunnel to version 2.0.1 to fix plotting issues.
  With this change, Python 2 is no longer supported.
  (https://github.com/lbl-srg/BuildingsPy/issues/599)

Version 5.2.0, March 14, 2025
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Updated pyfunnel requirement to version 1.0.2 to avoid a problem with regular expressions.
  (https://github.com/lbl-srg/BuildingsPy/issues/594)
- In buildingspy/simulate/Dymola.py and in buildingspy/development/regressiontest.py,
  switched simulator from dymola to dmc unless a gui window is requested.
  (https://github.com/lbl-srg/BuildingsPy/issues/590)
- In buildingspy/simulate/OpenModelica.py, added support for setNumberOfIntervals.
  (https://github.com/lbl-srg/BuildingsPy/issues/585)
- In buildingspy/simulate/OpenModelica.py, changed loading of Modelica libraries.
  (https://github.com/lbl-srg/BuildingsPy/issues/586)
- In buildingspy/simulate/base_simulator.py, corrected statement for error reporting.
  (https://github.com/lbl-srg/BuildingsPy/issues/583)
- In buildingspy/development/merger.py, added new comment form to allow excluding
  Modelica code for certain libraries.
  (https://github.com/lbl-srg/BuildingsPy/issues/566)
- In buildingspy/development/regressiontest.py, add option to create reference
  results in batch mode.
  (https://github.com/lbl-srg/BuildingsPy/issues/560)
- In buildingspy/development/regressiontest.py, add option to get the coverage
  rate, i.e., what percentage of examples are covered by regression tests.
  (https://github.com/lbl-srg/BuildingsPy/issues/253)
- For Optimica regression tests, added check for Integers that are too large to be represented
- In buildingspy/development/refactor.py, corrected moving images to avoid creating
  a directory if the target directory already exists.
  (https://github.com/lbl-srg/BuildingsPy/pull/548)